--- a/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
@@ -6,8 +6,7 @@ metadata:
   labels:
     {{- include "labels.common" . | nindent 4 }}
 spec:
-  updateStrategy:
-    {{- toYaml .Values.updateStrategy | indent 4 }}
+  updateStrategy: {{ toYaml .Values.updateStrategy | nindent 4 }}
   selector:
     matchLabels:
       {{- include "labels.selector" . | nindent 6 }}
@@ -40,7 +39,7 @@ spec:
       - name: node-cache
         image: "{{ .Values.image.registry }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
         {{- if .Values.resources }}
-          resources: {{ toYaml .Values.resources | nindent 8 }}
+        resources: {{ toYaml .Values.resources | nindent 8 }}
         {{- end }}
         args: [ "-localip", "__PILLAR__LOCAL__DNS__,__PILLAR__DNS__SERVER__", "-conf", "/etc/Corefile", "-upstreamsvc", "{{ .corednsServiceName }}" ]
         securityContext:
