--- a/helm/k8s-dns-node-cache-app/templates/psp.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/psp.yaml
@@ -6,11 +6,9 @@ metadata:
   labels:
     {{- include "labels.common" . | nindent 4 }}
 spec:
-  privileged: false
+  privileged: true
   allowPrivilegeEscalation: false
-  # Add back CAP_NET_BIND_SERVICE so that coredns can run on port 53
-  allowedCapabilities:
-  - NET_BIND_SERVICE
+  allowedCapabilities: []
   volumes:
     - 'configMap'
     - 'hostPath'
@@ -24,7 +22,7 @@ spec:
   - min: {{ .Values.ports.prometheus }}
     max: {{ .Values.ports.prometheus }}
   runAsUser:
-    rule: 'MustRunAsNonRoot'
+    rule: 'RunAsAny'
   seLinux:
     rule: 'RunAsAny'
   supplementalGroups:
@@ -37,4 +35,4 @@ spec:
     ranges:
       - min: 1
         max: 65535
-  readOnlyRootFilesystem: true
+  readOnlyRootFilesystem: false
