--- a/helm/k8s-dns-node-cache-app/templates/psp.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/psp.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "labels.common" . | nindent 4 }}
 spec:
   privileged: true
-  allowPrivilegeEscalation: false
+  allowPrivilegeEscalation: true
   allowedCapabilities: []
   volumes:
     - 'configMap'
