--- a/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
@@ -41,7 +41,7 @@ spec:
         {{- if .Values.resources }}
         resources: {{ toYaml .Values.resources | nindent 8 }}
         {{- end }}
-        args: [ "-localip", "{{ .Values.nodeLocalListenAddress }},{{ .Values.cluster.kubernetes.DNS.IP }}", "-conf", "/etc/Corefile", "-upstreamsvc", "{{ .Values.corednsServiceName }}" ]
+        args: [ "-localip", "{{ .Values.nodeLocalListenAddress }},{{ .Values.cluster.kubernetes.DNS.IP }}", "-conf", "/etc/Corefile", "-upstreamsvc", "{{ .Values.name }}-upstream" ]
         securityContext:
           allowPrivilegeEscalation: true
           privileged: true
