--- a/helm/k8s-dns-node-cache-app/values.yaml
+++ b/helm/k8s-dns-node-cache-app/values.yaml
@@ -24,16 +24,16 @@ cluster:
 nodeLocalListenAddress: 169.254.20.10
 
 ports:
-  dns:
-    name: dns
-    targetPort: 53
-    port: 53
   prometheus: 9253
   liveness: 8080
 
 # Reference of the traditional coredns pods.
 upstreamService:
-  targetPort: 1053
+  # The port the traditional coredns service is listening to.
+  servicePort: 53
+  # The port the traditional coredns pods are listening to.
+  podPort: 1053
+  # The value of the `k8s-app` label for the traditional coredns pods.
   appName: coredns
 
 resources:
