--- a/helm/k8s-dns-node-cache-app/templates/service-upstream.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/service-upstream.yaml
@@ -10,10 +10,10 @@ spec:
   - name: dns
     port: 53
     protocol: UDP
-    targetPort: {{ .Values.upstreamService.targetPort }}
+    targetPort: {{ .Values.upstreamService.podPort }}
   - name: dns-tcp
     port: 53
     protocol: TCP
-    targetPort: {{ .Values.upstreamService.targetPort }}
+    targetPort: {{ .Values.upstreamService.podPort }}
   selector:
     k8s-app: {{ .Values.upstreamService.appName }}
