--- a/helm/k8s-dns-node-cache-app/templates/service.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/service.yaml
@@ -7,6 +7,10 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "labels.common" . | nindent 4 }}
+    giantswarm.io/monitoring: "true"
+  annotations:
+    giantswarm.io/monitoring-path: /metrics
+    giantswarm.io/monitoring-port: "{{ .Values.ports.prometheus }}"
 spec:
   selector:
     k8s-app: {{ .Values.name }}
