--- a/helm/k8s-dns-node-cache-app/templates/configmap.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/configmap.yaml
@@ -15,19 +15,19 @@ data:
         }
         reload
         loop
-        bind {{ .Values.nodeLocalListenAddress }} {{ .Values.cluster.kubernetes.DNS.IP }}
+        bind {{ .Values.cluster.kubernetes.DNS.IP }}
         forward . __PILLAR__CLUSTER__DNS__ {
                 force_tcp
         }
         prometheus :{{ .Values.ports.prometheus }}
-        health {{ .Values.nodeLocalListenAddress }}:{{ .Values.ports.liveness }}
+        health {{ .Values.cluster.kubernetes.DNS.IP }}:{{ .Values.ports.liveness }}
     }
     in-addr.arpa:{{ .Values.upstreamService.servicePort }} {
         errors
         cache {{ .Values.configmap.cache.success }}
         reload
         loop
-        bind {{ .Values.nodeLocalListenAddress }} {{ .Values.cluster.kubernetes.DNS.IP }}
+        bind {{ .Values.cluster.kubernetes.DNS.IP }}
         forward . __PILLAR__CLUSTER__DNS__ {
                 force_tcp
         }
@@ -38,7 +38,7 @@ data:
         cache {{ .Values.configmap.cache.success }}
         reload
         loop
-        bind {{ .Values.nodeLocalListenAddress }} {{ .Values.cluster.kubernetes.DNS.IP }}
+        bind {{ .Values.cluster.kubernetes.DNS.IP }}
         forward . __PILLAR__CLUSTER__DNS__ {
                 force_tcp
         }
@@ -49,7 +49,7 @@ data:
         cache {{ .Values.configmap.cache.success }}
         reload
         loop
-        bind {{ .Values.nodeLocalListenAddress }} {{ .Values.cluster.kubernetes.DNS.IP }}
+        bind {{ .Values.cluster.kubernetes.DNS.IP }}
         forward . __PILLAR__UPSTREAM__SERVERS__
         prometheus :{{ .Values.ports.prometheus }}
     }
