remove references to namespace

--- a/helm/k8s-dns-node-cache-app/templates/rbac.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/rbac.yaml
@@ -25,6 +25,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: {{ .Values.name }}
+  namespace: {{ .Release.namespace }}
 roleRef:
   kind: ClusterRole
   name: {{ .Values.name }}
