--- a/helm/k8s-dns-node-cache-app/values.yaml
+++ b/helm/k8s-dns-node-cache-app/values.yaml
@@ -46,6 +46,9 @@ configmap:
     success: 30
     denial: 5
 
+verticalPodAutoscaler:
+  enabled: true
+
 test:
   image:
     name: giantswarm/alpine-testing
