--- a/helm/k8s-dns-node-cache-app/templates/np.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/np.yaml
@@ -1,7 +1,7 @@
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.namespace }}
   name: {{ .Values.name }}
   labels:
     {{- include "labels.common" . | nindent 4 }}
