--- a/helm/k8s-dns-node-cache-app/templates/psp.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/psp.yaml
@@ -2,7 +2,7 @@ apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
   name: {{ .Values.name }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "labels.common" . | nindent 4 }}
 spec:
