--- a/helm/k8s-dns-node-cache-app/templates/service-account.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/service-account.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.name }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "labels.common" . | nindent 4 }}
