--- a/helm/k8s-dns-node-cache-app/templates/service-upstream.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/service-upstream.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.name }}-upstream
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "labels.common" . | nindent 4 }}
 spec:
