--- a/helm/k8s-dns-node-cache-app/templates/vpa.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/vpa.yaml
@@ -4,7 +4,7 @@ apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
 metadata:
   name: {{ .Values.name }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "labels.common" . | nindent 4 }}
 spec:
