--- a/helm/k8s-dns-node-cache-app/values.yaml
+++ b/helm/k8s-dns-node-cache-app/values.yaml
@@ -3,6 +3,7 @@
 # Declare variables to be passed into your templates.
 
 name: k8s-dns-node-cache
+namespace: kube-system
 serviceType: managed
 
 image:
