--- a/helm/k8s-dns-node-cache-app/templates/psp.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/psp.yaml
@@ -6,9 +6,8 @@ metadata:
   labels:
     {{- include "labels.common" . | nindent 4 }}
 spec:
-  privileged: true
-  allowPrivilegeEscalation: true
-  allowedCapabilities: []
+  allowedCapabilities: 
+    - 'NET_ADMIN'
   volumes:
     - 'configMap'
     - 'hostPath'
