--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ workflows:
     jobs:
       - architect/push-to-app-catalog:
           context: architect
-          name: "push-to-managed-app-catalog"
+          name: "push-to-app-catalog"
           app_catalog: "giantswarm-catalog"
           app_catalog_test: "giantswarm-test-catalog"
           chart: "k8s-dns-node-cache-app"
