--- a/helm/k8s-dns-node-cache-app/Chart.yaml
+++ b/helm/k8s-dns-node-cache-app/Chart.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
-appVersion: 1.21.4
+appVersion: 1.22.13
 description: A Helm chart to run NodeLocal DNSCache in Kubernetes clusters
 home: https://github.com/giantswarm/k8s-dns-node-cache-app
 name: k8s-dns-node-cache-app
 version: [[ .Version ]]
+annotations:
+  application.giantswarm.io/team: "phoenix"
 restrictions:
   clusterSingleton: true
   fixedNamespace: kube-system
