--- a/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
@@ -17,9 +17,6 @@ spec:
         giantswarm.io/monitoring: "true"
     spec:
       priorityClassName: system-node-critical
-      securityContext:
-        runAsUser: 0
-        runAsGroup: 0
       serviceAccountName: {{ .Values.name }}
       hostNetwork: true
       dnsPolicy: Default  # Don't use cluster DNS.
@@ -34,7 +31,7 @@ spec:
       - name: node-cache
         image: "{{ .Values.image.registry }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
         {{- if .Values.resources }}
-        resources: {{ toYaml .Values.resources | nindent 8 }}
+        resources: {{ toYaml .Values.resources | nindent 10 }}
         {{- end }}
         args:
         - "-localip"
@@ -50,8 +47,9 @@ spec:
         - -metrics-listen-address
         - "0.0.0.0:{{ .Values.ports.prometheus.nodecache }}"
         securityContext:
-          allowPrivilegeEscalation: true
-          privileged: true
+          capabilities:
+            add:
+            - NET_ADMIN
         ports:
         - containerPort: {{ .Values.ports.prometheus.nodecache }}
           name: metrics
