--- a/helm/k8s-dns-node-cache-app/values.yaml
+++ b/helm/k8s-dns-node-cache-app/values.yaml
@@ -19,6 +19,8 @@ cluster:
   kubernetes:
     DNS:
       IP: 172.31.0.10
+    LOCAL:
+      IP: 169.254.20.10
     clusterDomain: cluster.local
 
 ports:
