Add icon to Chart.yaml

--- a/helm/k8s-dns-node-cache-app/Chart.yaml
+++ b/helm/k8s-dns-node-cache-app/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 appVersion: 1.22.13
 description: A Helm chart to run NodeLocal DNSCache in Kubernetes clusters
+icon: https://s.giantswarm.io/app-icons/giantswarm/1/dark.svg
 home: https://github.com/giantswarm/k8s-dns-node-cache-app
 name: k8s-dns-node-cache-app
 version: [[ .Version ]]
