Adjust min and max memory

--- a/helm/k8s-dns-node-cache-app/templates/vpa.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/vpa.yaml
@@ -12,7 +12,12 @@ spec:
     containerPolicies:
     - containerName: node-cache
       controlledValues: RequestsAndLimits
-      mode: Auto
+      maxAllowed:
+        cpu: 100m
+        memory: 50Mi
+      minAllowed:
+        cpu: 50m
+        memory: 25Mi
   targetRef:
     apiVersion: apps/v1
     kind: DaemonSet
