Fix: DNS increased latency with node-local-dns (#21)
* Adjust min memory

--- a/helm/k8s-dns-node-cache-app/templates/vpa.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/vpa.yaml
@@ -12,7 +12,9 @@ spec:
     containerPolicies:
     - containerName: node-cache
       controlledValues: RequestsAndLimits
-      mode: Auto
+      minAllowed:
+        cpu: 50m
+        memory: 25Mi
   targetRef:
     apiVersion: apps/v1
     kind: DaemonSet
