--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,17 @@ workflows:
             # Trigger the job also on git tag.
             tags:
               only: /^v.*/
+              
+      - architect/push-to-app-catalog:
+          context: architect
+          name: "push-to-default-app-catalog"
+          app_catalog: "default-catalog"
+          app_catalog_test: "default-test-catalog"
+          chart: "k8s-dns-node-cache-app"
+          filters:
+            # Trigger the job also on git tag.
+            tags:
+              only: /^v.*/
 
       - architect/integration-test:
           context: architect
