--- a/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
@@ -47,7 +47,9 @@ spec:
         - "0.0.0.0:{{ .Values.ports.prometheus.nodecache }}"
         - -skipteardown=true
         - -setupinterface=false
+        {{ if and .Values.enableCiliumLocalRedirectPolicy (not .Values.enableIptablesRules) }}
         - -setupiptables=false
+        {{ end }}
         securityContext:
           capabilities:
             add:
