Separate coredns and node-cache metric ports.

--- a/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
@@ -18,6 +18,7 @@ spec:
     spec:
       priorityClassName: system-node-critical
       serviceAccountName: {{ .Values.name }}
+      hostNetwork: true
       dnsPolicy: Default  # Don't use cluster DNS.
       tolerations:
       - key: "CriticalAddonsOnly"
@@ -69,6 +70,7 @@ spec:
           protocol: TCP
         livenessProbe:
           httpGet:
+            host: {{ .Values.cluster.kubernetes.DNS.IP }}
             path: /health
             port: {{ .Values.ports.liveness }}
           initialDelaySeconds: 60
