--- a/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
@@ -62,10 +62,10 @@ spec:
         - containerPort: {{ .Values.ports.prometheus.coredns }}
           name: corednsmetrics
           protocol: TCP
-        - containerPort: 53
+        - containerPort: {{ .Values.upstreamService.servicePort }}
           name: dns
           protocol: UDP
-        - containerPort: 53
+        - containerPort: {{ .Values.upstreamService.servicePort }}
           name: dns-tcp
           protocol: TCP
         livenessProbe:
