--- a/helm/k8s-dns-node-cache-app/templates/cilium-redirect.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/cilium-redirect.yaml
@@ -13,11 +13,11 @@ spec:
   redirectBackend:
     localEndpointSelector:
       matchLabels:
-        app.kubernetes.io/name: {{ .Values.name }}
+        {{- include "labels.selector" . | nindent 8 }}
     toPorts:
-      - port: "53"
+      - port: "{{ .Values.upstreamService.servicePort }}"
         name: dns
         protocol: UDP
-      - port: "53"
+      - port: "{{ .Values.upstreamService.servicePort }}"
         name: dns-tcp
         protocol: TCP
