--- a/helm/k8s-dns-node-cache-app/Chart.yaml
+++ b/helm/k8s-dns-node-cache-app/Chart.yaml
@@ -12,3 +12,4 @@ restrictions:
   fixedNamespace: kube-system
   gpuInstances: false
   compatibleProviders: [azure, aws]
+kubeVersion: ">=1.24.0-0"
