--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@4.27.0
+  architect: giantswarm/architect@dev:kubeeval-customv
 
 workflows:
   version: 2
@@ -12,6 +12,7 @@ workflows:
           app_catalog: "giantswarm-catalog"
           app_catalog_test: "giantswarm-test-catalog"
           chart: "k8s-dns-node-cache-app"
+          kubernetes_versions_validate: "1.24.0"
           filters:
             # Trigger the job also on git tag.
             tags:
@@ -23,6 +24,7 @@ workflows:
           app_catalog: "default-catalog"
           app_catalog_test: "default-test-catalog"
           chart: "k8s-dns-node-cache-app"
+          kubernetes_versions_validate: "1.24.0"
           filters:
             # Trigger the job also on git tag.
             tags:
