--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@4.27.0
+  architect: giantswarm/architect@dev:cilium
 
 workflows:
   version: 2
@@ -40,4 +40,3 @@ workflows:
                 - master
           requires:
             - push-to-app-catalog
-
