--- a/helm/k8s-dns-node-cache-app/templates/servicemonitor-coredns.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/servicemonitor-coredns.yaml
@@ -16,6 +16,13 @@ spec:
             - __meta_kubernetes_pod_node_name
           targetLabel: node
           replacement: ${1}
+        - sourceLabels:
+            - __meta_kubernetes_service_name
+          separator: ";"
+          regex: "(.*)"
+          targetLabel: app
+          replacement: $1
+          action: replace
   namespaceSelector:
     matchNames:
       - kube-system
