--- a/helm/k8s-dns-node-cache-app/templates/vpa.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/vpa.yaml
@@ -13,8 +13,8 @@ spec:
     - containerName: node-cache
       controlledValues: RequestsAndLimits
       minAllowed:
-        cpu: 50m
-        memory: 25Mi
+        cpu: {{ .Values.verticalPodAutoscaler.minAllowed.cpu }}
+        memory: {{ .Values.verticalPodAutoscaler.minAllowed.memory }}
   targetRef:
     apiVersion: apps/v1
     kind: DaemonSet
