ipv6 and resources

--- a/helm/k8s-dns-node-cache-app/values.yaml
+++ b/helm/k8s-dns-node-cache-app/values.yaml
@@ -39,20 +39,14 @@ upstreamService:
   appName: coredns
 
 resources:
-  limits:
-    cpu: 500m
-    memory: 150Mi
   requests:
-    cpu: 250m
-    memory: 50Mi
+    cpu: 100m
+    memory: 100m
 
 configmap:
   cache:
     success: 30
     denial: 5
-
-verticalPodAutoscaler:
-  enabled: true
 
 test:
   image:
