--- a/helm/k8s-dns-node-cache-app/templates/configmap.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/configmap.yaml
@@ -9,6 +9,9 @@ data:
   Corefile: |
     {{ .Values.cluster.kubernetes.clusterDomain }}:{{ .Values.upstreamService.servicePort }} {
         errors
+        template ANY AAAA {
+                rcode NOERROR
+        }
         cache {
                 success 9984 {{ .Values.configmap.cache.success }}
                 denial 9984 {{ .Values.configmap.cache.denial }}
@@ -46,6 +49,9 @@ data:
     }
     .:{{ .Values.upstreamService.servicePort }} {
         errors
+        template ANY AAAA {
+                rcode NOERROR
+        }
         cache {{ .Values.configmap.cache.success }}
         reload
         loop
