--- a/helm/k8s-dns-node-cache-app/values.yaml
+++ b/helm/k8s-dns-node-cache-app/values.yaml
@@ -39,6 +39,9 @@ upstreamService:
   appName: coredns
 
 resources:
+  limits:
+    cpu: ""
+    memory: ""
   requests:
     cpu: 100m
     memory: 100m
