ipv6 and resources (#37)
* ipv6 and resources

* go fixes

* values and schema

--- a/helm/k8s-dns-node-cache-app/values.yaml
+++ b/helm/k8s-dns-node-cache-app/values.yaml
@@ -40,19 +40,16 @@ upstreamService:
 
 resources:
   limits:
-    cpu: 500m
-    memory: 150Mi
+    cpu: ""
+    memory: ""
   requests:
-    cpu: 250m
-    memory: 50Mi
+    cpu: 100m
+    memory: 100m
 
 configmap:
   cache:
     success: 30
     denial: 5
-
-verticalPodAutoscaler:
-  enabled: true
 
 test:
   image:
