force TCP for external zones as well
Signed-off-by: Matias Charriere <matias@giantswarm.io>

--- a/helm/k8s-dns-node-cache-app/templates/configmap.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/configmap.yaml
@@ -61,6 +61,8 @@ data:
         reload
         loop
         bind 0.0.0.0
-        forward . __PILLAR__CLUSTER__DNS__
+        forward . __PILLAR__CLUSTER__DNS__ {
+                force_tcp
+        }
         prometheus :{{ .Values.ports.prometheus.coredns }}
     }
