--- a/helm/k8s-dns-node-cache-app/templates/configmap.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/configmap.yaml
@@ -15,7 +15,6 @@ data:
         cache {
                 success 9984 {{ .Values.configmap.cache.success }}
                 denial 9984 {{ .Values.configmap.cache.denial }}
-                prefetch 10 1m 20%
         }
         reload
         loop
@@ -28,9 +27,7 @@ data:
     }
     in-addr.arpa:{{ .Values.upstreamService.servicePort }} {
         errors
-        cache {{ .Values.configmap.cache.success }} {
-                prefetch 10 1m 20%
-        }
+        cache {{ .Values.configmap.cache.success }} 
         reload
         loop
         bind 0.0.0.0
@@ -41,9 +38,7 @@ data:
     }
     ip6.arpa:{{ .Values.upstreamService.servicePort }} {
         errors
-        cache {{ .Values.configmap.cache.success }} {
-                prefetch 10 1m 20%
-        }
+        cache {{ .Values.configmap.cache.success }} 
         reload
         loop
         bind 0.0.0.0
@@ -57,9 +52,7 @@ data:
         template ANY AAAA {
                 rcode NOERROR
         }
-        cache {{ .Values.configmap.cache.success }} {
-                prefetch 10 1m 20%
-        }
+        cache {{ .Values.configmap.cache.success }}
         reload
         loop
         bind 0.0.0.0
