--- a/helm/k8s-dns-node-cache-app/templates/configmap.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/configmap.yaml
@@ -56,6 +56,8 @@ data:
         reload
         loop
         bind 0.0.0.0
-        forward . __PILLAR__CLUSTER__DNS__
+        forward . __PILLAR__CLUSTER__DNS__ {
+                force_tcp
+        }
         prometheus :{{ .Values.ports.prometheus.coredns }}
     }
