Set seccompProfile explicitly to Unconfined
Signed-off-by: Matias Charriere <matias@giantswarm.io>

--- a/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
@@ -51,6 +51,8 @@ spec:
           capabilities:
             add:
             - NET_ADMIN
+          seccompProfile:
+            type: Unconfined
         ports:
         - containerPort: {{ .Values.ports.prometheus.nodecache }}
           name: metrics
