--- a/helm/k8s-dns-node-cache-app/templates/psp.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/psp.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ .Values.name }}
   namespace: {{ .Values.namespace }}
   annotations:
-    seccomp.security.alpha.kubernetes.io/allowedProfileNames: 'unconfined'
+    seccomp.security.alpha.kubernetes.io/allowedProfileNames: '*'
   labels:
     {{- include "labels.common" . | nindent 4 }}
 spec:
