fix pss exception
Signed-off-by: Matias Charriere <matias@giantswarm.io>

--- a/helm/k8s-dns-node-cache-app/templates/pss-exception.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/pss-exception.yaml
@@ -13,7 +13,7 @@ spec:
     - autogen-adding-capabilities
   - policyName: disallow-capabilities-strict
     ruleNames:
-    - adding-capabilities
+    - adding-capabilities-strict
     - autogen-adding-capabilities-strict
     - require-drop-all
     - autogen-require-drop-all
