Replace build pipeline with ABS
Signed-off-by: Matias Charriere <matias@giantswarm.io>

--- a/helm/k8s-dns-node-cache-app/Chart.yaml
+++ b/helm/k8s-dns-node-cache-app/Chart.yaml
@@ -1,12 +1,12 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: 1.22.23
 description: A Helm chart to run NodeLocal DNSCache in Kubernetes clusters
 icon: https://s.giantswarm.io/app-icons/giantswarm/1/dark.svg
 home: https://github.com/giantswarm/k8s-dns-node-cache-app
 name: k8s-dns-node-cache-app
-version: [[ .Version ]]
+version: 2.4.0
 annotations:
-  application.giantswarm.io/team: "phoenix"
+  application.giantswarm.io/team: "cabbage"
 restrictions:
   clusterSingleton: true
   fixedNamespace: kube-system
