--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,9 @@ workflows:
   build:
     jobs:
       - architect/push-to-app-catalog:
-          context: architect
           name: "push-to-app-catalog"
+          context: architect
+          executor: "app-build-suite"
           app_catalog: "giantswarm-catalog"
           app_catalog_test: "giantswarm-test-catalog"
           chart: "k8s-dns-node-cache-app"
@@ -18,11 +19,13 @@ workflows:
               only: /^v.*/
               
       - architect/push-to-app-catalog:
-          context: architect
           name: "push-to-default-app-catalog"
+          context: architect
+          executor: "app-build-suite"
           app_catalog: "default-catalog"
           app_catalog_test: "default-test-catalog"
           chart: "k8s-dns-node-cache-app"
+          persist_chart_archive: true
           filters:
             # Trigger the job also on git tag.
             tags:
