Replace test with ATS basic test.
Signed-off-by: Matias Charriere <matias@giantswarm.io>

--- a/helm/k8s-dns-node-cache-app/values.yaml
+++ b/helm/k8s-dns-node-cache-app/values.yaml
@@ -53,6 +53,9 @@ test:
     name: giantswarm/alpine-testing
     tag: 0.1.1
 
+ciliumNetworkPolicy:
+  enabled: true
+
 global:
   podSecurityStandards:
     enforced: false
