--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,15 +31,14 @@ workflows:
             tags:
               only: /^v.*/
 
-      - architect/integration-test:
-          context: architect
-          name: "basic-integration-test"
-          test-dir: "integration/test/basic"
-          install-app-platform: true
+      - architect/run-tests-with-ats:
+          name: execute chart tests
+          app-test-suite_version: "v0.4.1"
+          app-test-suite_container_tag: "0.4.1"
           filters:
-            # Do not trigger the job on merge to master.
+            # Do not trigger the job on merge to main.
             branches:
               ignore:
-                - master
+                - main
           requires:
-            - push-to-app-catalog
+            - push-to-default-app-catalog
