--- a/helm/k8s-dns-node-cache-app/templates/cilium-redirect.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/cilium-redirect.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ciliumNetworkPolicy.enabled }}
 apiVersion: cilium.io/v2
 kind: CiliumLocalRedirectPolicy
 metadata:
@@ -21,3 +22,4 @@ spec:
       - port: "{{ .Values.upstreamService.servicePort }}"
         name: dns-tcp
         protocol: TCP
+{{- end }}
