--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,15 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@4.31.0
+  architect: giantswarm/architect@4.33.0
 
 workflows:
   version: 2
   build:
     jobs:
       - architect/push-to-app-catalog:
-          context: architect
           name: "push-to-app-catalog"
+          context: architect
+          executor: "app-build-suite"
           app_catalog: "giantswarm-catalog"
           app_catalog_test: "giantswarm-test-catalog"
           chart: "k8s-dns-node-cache-app"
@@ -18,25 +19,26 @@ workflows:
               only: /^v.*/
               
       - architect/push-to-app-catalog:
-          context: architect
           name: "push-to-default-app-catalog"
+          context: architect
+          executor: "app-build-suite"
           app_catalog: "default-catalog"
           app_catalog_test: "default-test-catalog"
           chart: "k8s-dns-node-cache-app"
+          persist_chart_archive: true
           filters:
             # Trigger the job also on git tag.
             tags:
               only: /^v.*/
 
-      - architect/integration-test:
-          context: architect
-          name: "basic-integration-test"
-          test-dir: "integration/test/basic"
-          install-app-platform: true
+      - architect/run-tests-with-ats:
+          name: execute chart tests
+          app-test-suite_version: "v0.5.0"
+          app-test-suite_container_tag: "0.5.0"
           filters:
-            # Do not trigger the job on merge to master.
+            # Do not trigger the job on merge to main.
             branches:
               ignore:
-                - master
+                - main
           requires:
-            - push-to-app-catalog
+            - push-to-default-app-catalog
