Repository: Take out the trash.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
-k8s-dns-*.tgz
-k8s-dns-*.tgz-meta/
-*.kube.config
-test_results_*.xml
-.pytest_cache
-__pycache__
-**/.idea/
-vendor
-build
-*.swp
+k8s-dns-node-cache-app-*.tgz*
+tests/ats/test_results_*.xml
