--- a/.ats/main.yaml
+++ b/.ats/main.yaml
@@ -1,6 +1,13 @@
-app-tests-app-config-file: tests/ats/test-values.yaml
+app-tests-app-config-file: tests/values.yaml
 app-tests-deploy-namespace: kube-system
 
-smoke-tests-cluster-config-file: tests/kind_config.yaml
 smoke-tests-cluster-type: kind
-skip-steps: [functional, upgrade]
+smoke-tests-cluster-config-file: tests/cluster.yaml
+
+functional-tests-cluster-type: kind
+functional-tests-cluster-config-file: tests/cluster.yaml
+
+upgrade-tests-cluster-type: kind
+upgrade-tests-cluster-config-file: tests/cluster.yaml
+upgrade-tests-app-catalog-url: https://giantswarm.github.io/giantswarm-catalog
+upgrade-tests-app-config-file: tests/values.yaml
