--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,39 @@
 version: 2.1
+
 orbs:
   architect: giantswarm/architect@4.33.0
 
 workflows:
-  version: 2
   build:
     jobs:
       - architect/push-to-app-catalog:
-          name: "push-to-app-catalog"
+          name: push-to-giantswarm-catalog
           context: architect
-          executor: "app-build-suite"
-          app_catalog: "giantswarm-catalog"
-          app_catalog_test: "giantswarm-test-catalog"
-          chart: "k8s-dns-node-cache-app"
+          executor: app-build-suite
+          chart: k8s-dns-node-cache-app
+          app_catalog: giantswarm-catalog
+          app_catalog_test: giantswarm-test-catalog
+          persist_chart_archive: true
           filters:
-            # Trigger the job also on git tag.
             tags:
               only: /^v.*/
               
       - architect/push-to-app-catalog:
-          name: "push-to-default-app-catalog"
+          name: push-to-default-catalog
           context: architect
-          executor: "app-build-suite"
-          app_catalog: "default-catalog"
-          app_catalog_test: "default-test-catalog"
-          chart: "k8s-dns-node-cache-app"
-          persist_chart_archive: true
+          executor: app-build-suite
+          chart: k8s-dns-node-cache-app
+          app_catalog: default-catalog
+          app_catalog_test: default-test-catalog
           filters:
-            # Trigger the job also on git tag.
             tags:
               only: /^v.*/
 
       - architect/run-tests-with-ats:
-          name: execute chart tests
+          name: run-tests-with-ats
           filters:
-            # Do not trigger the job on merge to main.
             branches:
               ignore:
                 - main
           requires:
-            - push-to-default-app-catalog
+            - push-to-giantswarm-catalog
